[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "square-aperture-montage"
version = "0.1.0"
description = "Stitch 3×3 cryo-EM tilt-series tiles into one giant tilt-series using IMOD"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Hamidreza Rahmani", email = "hrahmani@scripps.edu" }
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "mrcfile>=1.4",
    "numpy>=1.23",
    "tqdm>=4.60",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.0",
    # cc3d (connected-components-3d) is conda-forge only — not on PyPI.
    # Install via: micromamba env create -f environment-gpu.yml
]
examples = [
    "pandas",
    "matplotlib",
    "pyserialem",
]
all = [
    "square-aperture-montage[gpu,examples]",
]

[project.scripts]
sqap-montage = "sqap_montage:cli"

[tool.setuptools]
# sqap_montage.py lives at the repo root and is the main entry point
py-modules = ["sqap_montage"]

[tool.setuptools.packages.find]
where = ["."]
include = ["square_aperture_montage*"]
